# tilt_programs

./: .gitignore  ARCHITECTURE.md  Anchor.toml  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_RESULTS.md  POHLIG_HELLMAN_GUIDE.md  README.md  bun.lockb  game_flow.md  game_flow.txt  manifesto.md  package.json  setup.sh  tsconfig.json
app/: example-game.ts  full-game-example.ts  paillier-mental-poker.ts  poker-client.ts  test-crypto.ts
keypairs/: usdc-mint-keypair.json  zkpoker-keypair.json
programs/tilt_programs/: Cargo.toml
programs/tilt_programs/src/: errors.rs  instructions.rs  lib.rs  poker.rs  state.rs
programs/tilt_programs/src/instructions/: funds.rs  game_end.rs  game_play.rs  game_setup.rs  player.rs
programs/tilt_programs/src/state/: game.rs  types.rs
programs/zkpoker/: Cargo.toml
programs/zkpoker/src/: errors.rs  lib.rs
programs/zkpoker/src/instructions/: game_setup.rs  mod.rs
programs/zkpoker/src/state/: game.rs  mod.rs  player.rs  types.rs
tests/: poker-game.ts  tilt_programs.ts
