[package]
name = "zkpoker"
version = "0.1.3"
description = "Programs for permissionless, provably fair poker on Solana"
authors = ["calmdentist <calmdentist@proton.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zkpoker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
solana-program = "1.16"
crypto-bigint = { version = "0.5", default-features = false, features = ["serde"] }
